--- a/src/components/widget/TOC.astro
+++ b/src/components/widget/TOC.astro
@@ -20,6 +20,7 @@ const className = Astro.props.class;
 const isPostsRoute =
 	Astro.url.pathname.includes("/posts/") || headings.length > 0;
 
+
 const removeTailingHash = (text: string) => {
 	let lastIndexOfHash = text.lastIndexOf("#");
 	if (lastIndexOfHash !== text.length - 1) {
@@ -33,9 +34,11 @@ let heading1Count = 1;
 
 const maxLevel = siteConfig.toc.depth;
 ---
-<table-of-contents class:list={[className, "group"]} id="toc">
+{isPostsRoute && (
+  <table-of-contents class:list={[className, "group"]} id="toc">
     <!-- TOC内容将由JavaScript动态生成 -->
-</table-of-contents>
+  </table-of-contents>
+)}
 
 <script>
 class TableOfContents extends HTMLElement {
@@ -56,7 +59,7 @@ class TableOfContents extends HTMLElement {
             this.markVisibleSection, { threshold: 0 }
         );
     };
-
+    
     markVisibleSection = (entries: IntersectionObserverEntry[]) => {
         entries.forEach((entry) => {
             const id = entry.target.children[0]?.getAttribute("id");
